Frontend/src/components/Item.css
.item-text {
    display: flex;
    align-items: left;
    padding: 8px 0;
    color: #f9f9f9;
    transition: background-color 0.2s ease;
}
.item-container {
    display: flex;
    align-items: flex-start;
    gap: 5px;
    padding: 1px 0;
    list-style: none;
  }

.checkbox {
    -webkit-appearance: none;
    appearance: none;
    width: 22px;
    height: 22px;
    border-radius: 50%;
    border: 2px solid #a7a7a7;
    outline: none;
    cursor: pointer;
    position: relative;
    transition: all 0.2s ease;
    margin-right: 12px;
    flex-shrink: 0;
}

@keyframes pulse {
    0% { transform: scale(1); }
    50% { transform: scale(1.1); }
    100% { transform: scale(1); }
  }

.checkbox:checked {
    animation:pulse 0.3s ease;
    background-color: #FFD52E;
    border-color: #FFD52E;
}

span {
    transition: opacity 0.3s ease;
}

.checkbox:checked + span {
    opacity: 0.7;
}

.checkbox:checked::after {
    content: "";
    position: absolute;
    left: 6px;
    top: 2px;
    width: 5px;
    height: 10px;
    border: solid white;
    border-width: 0 2px 2px 0;
    transform: rotate(45deg);
}

.edit-input {
    flex: 1;
    padding: 6px;
    font-size: inherit;
    border: 1px solid #ddd;
    border-radius: 4px;
    font-family: inherit;
    transition: border-color 0.2s ease;
  }

  .item-text:hover {
    color: #848484;
  }

  .item-text.checked {
    text-decoration: line-through;
    color: #888;
  }

